# JourneyIQ

./: .env.example  .gitignore  CLAUDE.md  JourneyIQ.py  README.md  config.py  main.py  pyproject.toml  test.py
.claude/: launch.json
app/: config.py  main.py  models.py  socket_manager.py
app/ai/: client.py  prompts.py  tool_schemas.py
app/services/: __init__.py  http_client.py
app/tools/: __init__.py  approvals.py  bookings.py  cancellations.py  car_rental.py  email.py  expenses.py  faq.py  flights.py  hotels.py  itinerary.py  policy.py  registry.py  trip_cancel.py  trips.py  weather.py
docs/: architecture.md  knowledge_base.md
mcp/: server.py
mcp_server/: server.py
services/: http_client.py
tools/: __init__.py  hotels.py  itinerary.py  trips.py  weather.py
